; ModuleID = '/home/carl/AnghaBench/libgit2/tests/refs/reflog/extr_reflog_helpers.c_reflog_entry_tostr.c'
source_filename = "/home/carl/AnghaBench/libgit2/tests/refs/reflog/extr_reflog_helpers.c_reflog_entry_tostr.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@GIT_OID_HEXSZ = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [12 x i8] c"%s %s %s %s\00", align 1
@.str.1 = private unnamed_addr constant [8 x i8] c"somesig\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32*, i32*)* @reflog_entry_tostr to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @reflog_entry_tostr(i32* %0, i32* %1) #0 {
  %3 = alloca i32*, align 8
  %4 = alloca i32*, align 8
  %5 = alloca i8*, align 8
  %6 = alloca i64, align 8
  %7 = alloca i64, align 8
  store i32* %0, i32** %3, align 8
  store i32* %1, i32** %4, align 8
  %8 = load i32, i32* @GIT_OID_HEXSZ, align 4
  %9 = zext i32 %8 to i64
  %10 = call i8* @llvm.stacksave()
  store i8* %10, i8** %5, align 8
  %11 = alloca i8, i64 %9, align 16
  store i64 %9, i64* %6, align 8
  %12 = load i32, i32* @GIT_OID_HEXSZ, align 4
  %13 = zext i32 %12 to i64
  %14 = alloca i8, i64 %13, align 16
  store i64 %13, i64* %7, align 8
  %15 = load i32*, i32** %3, align 8
  %16 = icmp ne i32* %15, null
  br i1 %16, label %17, label %20

17:                                               ; preds = %2
  %18 = load i32*, i32** %4, align 8
  %19 = icmp ne i32* %18, null
  br label %20

20:                                               ; preds = %17, %2
  %21 = phi i1 [ false, %2 ], [ %19, %17 ]
  %22 = zext i1 %21 to i32
  %23 = call i32 @assert(i32 %22)
  %24 = load i32, i32* @GIT_OID_HEXSZ, align 4
  %25 = load i32*, i32** %4, align 8
  %26 = call i32 @git_reflog_entry_id_old(i32* %25)
  %27 = call i32 @git_oid_tostr(i8* %11, i32 %24, i32 %26)
  %28 = load i32, i32* @GIT_OID_HEXSZ, align 4
  %29 = load i32*, i32** %4, align 8
  %30 = call i32 @git_reflog_entry_id_new(i32* %29)
  %31 = call i32 @git_oid_tostr(i8* %14, i32 %28, i32 %30)
  %32 = load i32*, i32** %3, align 8
  %33 = load i32*, i32** %4, align 8
  %34 = call i32 @git_reflog_entry_message(i32* %33)
  %35 = call i32 @git_buf_printf(i32* %32, i8* getelementptr inbounds ([12 x i8], [12 x i8]* @.str, i64 0, i64 0), i8* %11, i8* %14, i8* getelementptr inbounds ([8 x i8], [8 x i8]* @.str.1, i64 0, i64 0), i32 %34)
  %36 = load i8*, i8** %5, align 8
  call void @llvm.stackrestore(i8* %36)
  ret i32 %35
}

; Function Attrs: nounwind
declare i8* @llvm.stacksave() #1

declare dso_local i32 @assert(i32) #2

declare dso_local i32 @git_oid_tostr(i8*, i32, i32) #2

declare dso_local i32 @git_reflog_entry_id_old(i32*) #2

declare dso_local i32 @git_reflog_entry_id_new(i32*) #2

declare dso_local i32 @git_buf_printf(i32*, i8*, i8*, i8*, i8*, i32) #2

declare dso_local i32 @git_reflog_entry_message(i32*) #2

; Function Attrs: nounwind
declare void @llvm.stackrestore(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
